# IFJ-projekt

./: .gitignore  Makefile  README.md  ll_gramatika.txt  prezentace_ifj.odp  rozdeleni.txt
.circleci/: config.yml
src/: CMakeLists.txt  Connector.c  Connector.h  Makefile  connector.c  connector.h  error_codes.h  expression.c  expression.h  expressionParser.c  expressionParser.h  ilist.c  ilist.h  instr.c  instr.h  main.c  parser.c  parser.h  sa.c  scanner.c  scanner.h  stack.c  stack.h  str.c  str.h  symtable.c  symtable.h  test.c
tests/: test_expParser.c  test_expression.c  test_ilist.c  test_scanner.c  test_symtable.c
tests/test_files/real_examples/: eols.go  example1.go  example2.go  inputs.go
tests/test_files/test_scanner/: comment  error0  error5  error6  error7  error9  tAssignment  tBiggerOrEqual  tBiggerThan  tBuiltIn  tComma  tDeclaration  tDouble  tId  tInteger  tKeyword  tNotEqual  tSemicolon  tSmallerOrEqual  tSmallerThan  tString
